fix spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -343,7 +343,7 @@ p.subheading {
 
 .faq .faq-body {
 	position: static;
-	margin-top: 3em;
+	margin-top: 1em;
 }
 
 .faq h2 {
